fix scrollbar appearing when middle-pane is too long

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -4,7 +4,6 @@ html, body {
 
 .full-height {
   height: 100%;
-  max-height: 100%;
 }
 
 .full-width {
